# SpectreInvestigationAgent

./: .gitignore  LICENSE  README.md  entry-points.json  investigate.mermaid  main.py  project.uiproj  pyproject.toml  refresh_token.ps1  test_input.json  uipath.json
.uipath/: .auth.json  .error_log  .telemetry.json  SpectreInvestigationAgent.1.0.0.nupkg  SpectreInvestigationAgent.1.0.1.nupkg  SpectreInvestigationAgent.1.0.10.nupkg  SpectreInvestigationAgent.1.0.12.nupkg  SpectreInvestigationAgent.1.0.14.nupkg  SpectreInvestigationAgent.1.0.15.nupkg  SpectreInvestigationAgent.1.0.16.nupkg  SpectreInvestigationAgent.1.0.17.nupkg  SpectreInvestigationAgent.1.0.18.nupkg  SpectreInvestigationAgent.1.0.19.nupkg  SpectreInvestigationAgent.1.0.2.nupkg  SpectreInvestigationAgent.1.0.3.nupkg  SpectreInvestigationAgent.1.0.4.nupkg  SpectreInvestigationAgent.1.0.5.nupkg  SpectreInvestigationAgent.1.0.6.nupkg  SpectreInvestigationAgent.1.0.8.nupkg  SpectreInvestigationAgent.1.0.9.nupkg
evaluations/eval-sets/: spectre-investigation.json
evaluations/evaluators/: exact-match.json
scripts/: test_queue_search.py
src/spectre/: agent.py  auth.py  llm.py  logger.py  orchestrator.py
tests/: test_agent.py  test_auth.py  test_llm.py  test_orchestrator.py
